2009-10-01  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c (build_re_table, add_type_table,
				    add_list_table): Remove function.
	* application-src/amstar.c: Use NORNAL, IGNORE and STRANGE properties.
	* client-src/client_util.c (build_re_table, add_type_table,
				   add_list_table): Add function.
	* client-src/client_util.h (build_re_table, add_type_table,
				    add_list_table): Add prototype.
	* client-src/client_util.h (dmpline_t, amregex_t, AM_*_RE):
		Add declaration.
	* client-src/sendbackup.h (dmpline_t, amregex_t, AM_*_RE):
		Remove declaration.
	* client-src/sendsize.c: Rename 'struct regex_s' to
					'struct regex_scale_s'.
	* man/xml-source/amstar.8.xml: Document new NORNAL, IGNORE and STRANGE
				       properties.

2009-10-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (bsd_prefix_packet): Use geteuid login
							  name.

2009-10-01  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add --no-wildcards argument to gtar extract
				    command.
	* restore-src/amidxtaped.c: Set rst_flags->header_to_fd to -1.

2009-09-30  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/dumper.c: runs setuid root
	* common-src/local-security.c: drop root privs
	* common-src/rsh-security.c: drop root privs
	* common-src/ssh-security.c: drop root privs

2009-09-29  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/amandad.h common-src/amanda.h: move constants
	  to amanda.h
	* common-src/util.c common-src/util.h: add openbsd_fd_inform, to
	  inform the OpenBSD pthread library about high-numbered fd's created
	  by amandad
	* client-src/noop.c client-src/selfcheck.c client-src/sendbackup.c
	  client-src/sendsize.c restore-src/amidxtaped.c server-src/amindexd.c:
	  use openbsd_fd_infom

2009-09-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.h: fix comment
	* server-src/planner.c: planner runs setuid, so tell check_running_as
